--- a/staRt/www/states/root/profiles/_profiles_styles.scss
+++ b/staRt/www/states/root/profiles/_profiles_styles.scss
@@ -201,6 +201,7 @@
 			display: flex;
 			height: 100%;
 			width: 64px;
+			background-color: transparent;
 			//border: 1px solid red;
 
 			button {
@@ -209,7 +210,8 @@
 				border-radius: 10px;
 				font-size: 2.5em;
 				font-weight: 600;
-				color: $c-text-main;
+				background-color: transparent;
+				color: $c-bronze-500; //$c-text-main;
 			}
 		} // .card-closeBox
 
