--- a/staRt/www/states/root/profiles/_profiles_styles.scss
+++ b/staRt/www/states/root/profiles/_profiles_styles.scss
@@ -291,15 +291,15 @@ If you are just trying out some new styles, protoype here. If a set looks goods 
 	}
 }
 
-.testerIcon {
-	position: relative;
-	display: inline-block;
-	height: 28px;
-	width: 28px;
-	// margin-left: 1em;
-	background-image: url('../img/profiles/ico_star-line.svg');
-	background-repeat: no-repeat;
-	background-position: center;
-	background-size: contain;
-	//border: 1px solid white;
-}
+// .testerIcon {
+// 	position: relative;
+// 	display: inline-block;
+// 	height: 28px;
+// 	width: 28px;
+// 	// margin-left: 1em;
+// 	background-image: url('../img/profiles/ico_star-line.svg');
+// 	background-repeat: no-repeat;
+// 	background-position: center;
+// 	background-size: contain;
+// 	//border: 1px solid white;
+// }
