--- a/staRt/www/states/root/profiles/drawer-template/_profiles-drawer.scss
+++ b/staRt/www/states/root/profiles/drawer-template/_profiles-drawer.scss
@@ -171,33 +171,174 @@
 	justify-content: space-between;
 	height: $row-h * 3.66;
 	width: 100%;
-	padding-left: $col-w * 2;
+	padding-left: $col-w * 1.9;
 	text-align: left;
 	//border: 1px solid lime;
 
-	.item, .item-content { // ionic class overwrite
-	background-color: transparent !important;
-	}
-	.item { // ionic class overwrite
-		border-bottom: 1px solid rgba(255,255,255, 0.5);
-	}
-}
+	// ionic class overwrites ------
+	ion-scroll {
+		position: relative;
+		width: 100%;
+		height: 100%;
+		//border: 1px solid lime;
+
+		ion-list {
+			position: relative;
+			width: 100%;
+			height: 100%;
+
+			label { // ionic class
+				background-color: transparent !important;
+
+				div.radio-content { // ionic class
+					//border: 1px solid pink;
+
+					div.item-content { // ionic class
+						background-color: transparent !important;
+						// border-bottom: 1px solid rgba(255,255,255, 0.5);
+						padding: 0 !important;
+					} // .item-content
+				} // .radio-content
+			} //label
+		} // ion-list
+	} // ion-scroll
+} // .profiles_list-body
 
 
-.name-item {
+.profiles-drawer-item {
 	position: relative;
 	display: flex;
-	flex-flow: row nowrap;
-	align-items: center;
-	// border: 1px solid red;
+	flex-flow: column nowrap;
+	justify-content: center;
+	height: 64px;
+	width: 100%;
+	//border: 1px solid pink;
 
-	.initials { // not in use
-		margin-right: 1em;
-	}
-	.name-text {
-		margin-right: 1em;
-	}
-}
+	.r-item-bg {
+		position: absolute;
+		top: 0;
+		left: 0;
+		height: 64px;
+		width: 100%;
+		z-index: 90;
+		background-image: none;
+		border-top-left-radius: 32px;
+		border-bottom-left-radius: 32px;
+		border-bottom: 1px solid rgba(255, 255, 255, 0.4);
+		border-left: 0;
+		//$c-text-subtle;
+		// border-right: 0;
+
+		//border: 1px solid pink;
+
+		&.selected-bg {
+			// background-image: url('../img/profiles/selected-alpha.png');
+			// background-size: 100% 100%;
+			// background-repeat: no-repeat;
+
+			border: 1px solid white; //$c-text-subtle;
+			border-right: 0;
+			border-top-left-radius: 32px;
+			border-bottom-left-radius: 32px;
+			font-weight: 700;
+			//opacity: 0.4;
+			z-index: 90;
+		}
+	} // .r-item-bg
+
+	.r-item-content {
+		position: relative;
+		display: flex;
+		flex-flow: row nowrap;
+		justify-content: flex-start; //space-between;
+		align-items: center;
+		//height: 48px;
+		height: 100%;
+		width: 100%;
+		z-index: 92;
+		padding: 0; // 32px;
+		//border: 1px solid lime;
+
+		.r-item-roundEnd {
+			height: 100%;
+			width: 32px;
+			border-top-left-radius: 32px;
+			border-bottom-left-radius: 32px;
+			// border: 1px solid white;
+			// border-right: 0;
+		}
+
+		.r-item-nameRow {
+			position: relative;
+			display: flex;
+			flex-flow: row nowrap;
+			justify-content: flex-start; //space-between;
+			height: 100%;
+			width: 100%;
+			border-bottom: 1px solid rgba(255, 255, 255, 0.4);
+
+			// .drawer-initials {
+			// 	border: 1px solid lime;
+			// 	height: 100%;
+			// 	width: 20%;
+			// }
+
+			.name-text {
+				display: flex;
+				align-items: center;
+				color: $c-text-main;
+				font-weight: 500;
+				width: 100%;
+				height: 100%;
+				opacity: 1;
+				padding-left: 1em;
+				//border: 1px solid lime;
+			} // .name-text
+
+			.r-item-iconBox {
+				position: relative;
+				display: flex;
+				flex-flow: row nowrap;
+				align-items: center;
+				padding-right: 2em;
+				padding-left: 1em;
+				//border: 1px solid lime;
+
+				.testerIcon {
+					position: relative;
+					display: inline-block;
+					height: 28px;
+					width: 28px;
+					// margin-left: 1em;
+					background-image: url('../img/profiles/ico_star-line.svg');
+					background-repeat: no-repeat;
+					background-position: center;
+					background-size: contain;
+					//border: 1px solid white;
+				}
+			} // .r-item-iconBox
+		}
+
+		&.r-item-selected { // 'r-item-content r-item-selected'
+			.r-item-roundEnd {
+				// border: 1px solid white;
+				border-right: 0;
+				background-color: rgba(255, 255, 255, 0.2);
+			}
+			.r-item-nameRow {
+				// border-top: 1px solid white;
+				// border-bottom: 1px solid white;
+				background-color: rgba(255, 255, 255, 0.2);
+			}
+		}
+	} // .r-item-content
+
+} // .profiles-drawer-item
+
+
+
+
+
 
 // ================================================
 // PROFILES FOOT
