--- a/staRt/www/states/root/profiles/drawer-template/_profiles-drawer.scss
+++ b/staRt/www/states/root/profiles/drawer-template/_profiles-drawer.scss
@@ -3,8 +3,6 @@
 //.profiles-layout_drawer-left
 // z-index: 90;
 // ================================================
-// .red { border: 1px solid red; } //#dev
-
 
 .p-drawer_layout_head-body {
 	position: relative;
@@ -175,7 +173,7 @@
 	text-align: left;
 	//border: 1px solid lime;
 
-	// ionic class overwrites ------
+	// IONIC CLASS OVERWRITES ------
 	ion-scroll {
 		position: relative;
 		width: 100%;
@@ -204,7 +202,7 @@
 	} // ion-scroll
 } // .profiles_list-body
 
-
+// CUSTOM STYLES ------
 .profiles-drawer-item {
 	position: relative;
 	display: flex;
@@ -214,6 +212,9 @@
 	width: 100%;
 	//border: 1px solid pink;
 
+
+	 /* Not currently in use.
+	 // Container to hold bg-image for selected drawer-item.
 	.r-item-bg {
 		position: absolute;
 		top: 0;
@@ -226,16 +227,12 @@
 		border-bottom-left-radius: 32px;
 		border-bottom: 1px solid rgba(255, 255, 255, 0.4);
 		border-left: 0;
-		//$c-text-subtle;
-		// border-right: 0;
-
 		//border: 1px solid pink;
 
 		&.selected-bg {
 			// background-image: url('../img/profiles/selected-alpha.png');
 			// background-size: 100% 100%;
 			// background-repeat: no-repeat;
-
 			border: 1px solid white; //$c-text-subtle;
 			border-right: 0;
 			border-top-left-radius: 32px;
@@ -245,6 +242,7 @@
 			z-index: 90;
 		}
 	} // .r-item-bg
+	*/
 
 	.r-item-content {
 		position: relative;
@@ -252,11 +250,10 @@
 		flex-flow: row nowrap;
 		justify-content: flex-start; //space-between;
 		align-items: center;
-		//height: 48px;
 		height: 100%;
 		width: 100%;
 		z-index: 92;
-		padding: 0; // 32px;
+		padding: 0;
 		//border: 1px solid lime;
 
 		.r-item-roundEnd {
@@ -264,8 +261,6 @@
 			width: 32px;
 			border-top-left-radius: 32px;
 			border-bottom-left-radius: 32px;
-			// border: 1px solid white;
-			// border-right: 0;
 		}
 
 		.r-item-nameRow {
@@ -277,7 +272,7 @@
 			width: 100%;
 			border-bottom: 1px solid rgba(255, 255, 255, 0.4);
 
-			// .drawer-initials {
+			// .drawer-initials { // not in use
 			// 	border: 1px solid lime;
 			// 	height: 100%;
 			// 	width: 20%;
@@ -293,7 +288,7 @@
 				opacity: 1;
 				padding-left: 1em;
 				//border: 1px solid lime;
-			} // .name-text
+			}
 
 			.r-item-iconBox {
 				position: relative;
@@ -309,15 +304,13 @@
 					display: inline-block;
 					height: 28px;
 					width: 28px;
-					// margin-left: 1em;
 					background-image: url('../img/profiles/ico_star-line.svg');
 					background-repeat: no-repeat;
 					background-position: center;
 					background-size: contain;
-					//border: 1px solid white;
 				}
 			} // .r-item-iconBox
-		}
+		} // .r-item-nameRow
 
 		&.r-item-selected { // 'r-item-content r-item-selected'
 			.r-item-roundEnd {
@@ -330,12 +323,9 @@
 				// border-bottom: 1px solid white;
 				background-color: rgba(255, 255, 255, 0.2);
 			}
-		}
+		} //&.r-item-selected
 	} // .r-item-content
-
 } // .profiles-drawer-item
-
-
 
 
 
