--- a/staRt/www/css/app_styles.css
+++ b/staRt/www/css/app_styles.css
@@ -996,6 +996,53 @@ input, textarea {
     height: 100%;
     width: 100%; }
 
+.card-body-profile {
+  position: relative;
+  display: flex; }
+
+.profileCard-display-state {
+  position: relative;
+  display: flex;
+  flex-flow: column nowrap;
+  padding: 0 2.08333vw; }
+  .profileCard-display-state .userInfo-layout {
+    position: relative;
+    display: flex;
+    flex-flow: column nowrap;
+    margin-top: 1em;
+    margin-bottom: 4.16667vh; }
+    .profileCard-display-state .userInfo-layout .userInfo-row {
+      position: relative;
+      display: flex;
+      flex-flow: row nowrap;
+      align-items: flex-end;
+      width: 100%;
+      color: #3D6D84;
+      font-size: 1em;
+      margin-bottom: 1.75em;
+      border-bottom: 1px solid #c2f2f2; }
+      .profileCard-display-state .userInfo-layout .userInfo-row .fieldLabel {
+        display: flex;
+        width: 25%;
+        font-size: 0.75em;
+        font-weight: 600;
+        color: #7ab5b8;
+        text-transform: uppercase;
+        margin-right: 1em;
+        line-height: normal; }
+      .profileCard-display-state .userInfo-layout .userInfo-row .fieldData {
+        font-size: 1.25em;
+        line-height: normal; }
+  .profileCard-display-state .btn-row-layout {
+    position: relative;
+    display: flex;
+    width: 100%;
+    height: 16.66667vh;
+    justify-content: flex-start;
+    margin-top: 0.5em; }
+    .profileCard-display-state .btn-row-layout .button {
+      height: 64px; }
+
 .card-recordings ion-item {
   border-bottom: 1px solid lightgray; }
 
