Removes temp text from Profiles/Welcome Screen

--- a/staRt/www/app_styles.scss
+++ b/staRt/www/app_styles.scss
@@ -6,6 +6,7 @@
 
 // dev, to be deleted after redesign
 //@import 'common-styles/dev/img-bg';
+@import 'common-styles/temp_icon-like-assets';
 
 // State styles
 @import 'states/root/root_styles';
