--- a/staRt/www/states/root/profiles/card-templates/_profiles_card-content.scss
+++ b/staRt/www/states/root/profiles/card-templates/_profiles_card-content.scss
@@ -60,6 +60,12 @@
 	}
 }
 
+i.r-icon-big {
+		height: 100%;
+		width: auto;
+		font-size: 2.5em !important;
+}
+
 
 // INDIVIDUAL CARD STYLES ==========================
 @import 'profile/card-profile';
