--- a/staRt/www/css/app_styles.css
+++ b/staRt/www/css/app_styles.css
@@ -371,6 +371,63 @@ input[type=range]::-webkit-slider-thumb {
     -webkit-transform: perspective(400px);
     transform: perspective(400px); } }
 
+.r-ico56 {
+  position: relative;
+  display: inline-block;
+  height: 56px;
+  width: 56px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain; }
+
+.r-ico48 {
+  position: relative;
+  display: inline-block;
+  height: 48px;
+  width: 48px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain; }
+
+.r-ico40 {
+  position: relative;
+  display: inline-block;
+  height: 40px;
+  width: 40px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain; }
+
+.r-ico32 {
+  position: relative;
+  display: inline-block;
+  height: 32px;
+  width: 32px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain; }
+
+.r-ico24 {
+  position: relative;
+  display: inline-block;
+  height: 24px;
+  width: 24px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain; }
+
+.r-ico16 {
+  position: relative;
+  display: inline-block;
+  height: 16px;
+  width: 16px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain; }
+
+.r-ico-starfish {
+  background-image: url("../img/profiles/ico_star-line.svg"); }
+
 * {
   margin: 0;
   padding: 0;
@@ -834,15 +891,6 @@ input, textarea {
         align-items: center;
         padding-right: 2em;
         padding-left: 1em; }
-        .profiles-drawer-item .r-item-content .r-item-nameRow .r-item-iconBox .testerIcon {
-          position: relative;
-          display: inline-block;
-          height: 28px;
-          width: 28px;
-          background-image: url("../img/profiles/ico_star-line.svg");
-          background-repeat: no-repeat;
-          background-position: center;
-          background-size: contain; }
     .profiles-drawer-item .r-item-content.r-item-selected .r-item-roundEnd {
       border-right: 0;
       background-color: rgba(255, 255, 255, 0.2); }
@@ -937,9 +985,11 @@ input, textarea {
     align-items: flex-start;
     height: 100%;
     width: 100%;
-    padding-top: 4.16667vh;
+    padding-top: 2em;
     padding-left: 1em;
-    font-size: 1em; }
+    padding-right: 2em;
+    font-size: 1em;
+    line-height: 2em; }
     .profiles-noCard .profiles-welcome.welcome_shouldCreateProfile button {
       display: flex;
       flex-flow: row nowrap;
@@ -1085,6 +1135,11 @@ input, textarea {
     color: #3D6D84;
     height: 100%;
     width: 100%; }
+
+i.r-icon-big {
+  height: 100%;
+  width: auto;
+  font-size: 2.5em !important; }
 
 .card-body-profile {
   position: relative;
