--- a/staRt/www/common-styles/_variables.scss
+++ b/staRt/www/common-styles/_variables.scss
@@ -3,7 +3,7 @@
 // 2018 COLORS -------------------------------
 
 //text
-$c-text-main: #3D6D84; //navy blue
+$c-text-main: rgba(61,109,132,1); //#3D6D84; navy blue
 $c-text-subtle: #7ab5b8;
 
 // eles
