--- a/staRt/www/common-components/lpc-directive/_lpc-directive_styles.scss
+++ b/staRt/www/common-components/lpc-directive/_lpc-directive_styles.scss
@@ -10,7 +10,7 @@ lpc-directive { // Parent ele. Layout class.
 	width: 100%;
   height: 100%;
   justify-content: space-around;
-	//border: 1px solid red;
+	border: 1px solid violet;
 
 	.lpc-contentBox { // Container class.
 		// Holds LPC and any .button-side-containers
@@ -27,15 +27,22 @@ lpc-directive { // Parent ele. Layout class.
 	z-index: 10;
 	width: 100%;
 	height: 100%;
-	display: flex;
+	display: block; //#hc
 	align-items: center;
+	border: 1px solid lime;
 }
 
-.reset-button {
-	margin-top: 0px;
-  margin-right: 0px;
-	//border: 1px solid cyan;
+canvas {
+	width: 100%;
+	height: 100%;
+	border: 1px solid deeppink;
 }
+
+// .reset-button {
+// 	margin-top: 0px;
+//   margin-right: 0px;
+// 	//border: 1px solid cyan;
+// }
 
 // ================================================
 // RATING + RESET BUTTONS
@@ -201,12 +208,58 @@ lpc-directive { // Parent ele. Layout class.
 
 }
 
-#sand {
-	height: 60px;
-	display: block;
-	position: absolute;
-	left: -1px;
-	bottom: 0px;
-	width: 100.3%;
-	background-color: $yellow-main;
+// #sand {
+// 	height: 60px;
+// 	display: block;
+// 	position: absolute;
+// 	left: -1px;
+// 	bottom: 0px;
+// 	width: 100.3%;
+// 	background-color: $yellow-main;
+// }
+
+
+
+#fzText {
+  position: absolute;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+  top: 45%;
+	padding-top: 1px;
+  left: $col-w * 2.25;
+  width: $col-w * 1;
+  height: auto;
+  font-size: 1.1em;
+  font-weight: 600;
+  text-align: center;
+  color: #018B9D;  /* #50d3d6; #018B9D;*/
+  z-index: 10;
+  opacity: 0.5;
+  // border-left: 1px solid deeppink;
+	// border-right: 1px solid deeppink;
 }
+
+// #resetText { /* #hc revisit this */
+//   position: absolute;
+// 	display: flex;
+// 	justify-content: center;
+// 	align-items: center;
+//   top: $row-h * 2.45;
+//   left: $col-w * 9.65;
+//   transform: rotate(5deg);
+//   width: 56px;
+// 	//margin-top: 3px;
+//   //padding: 2px 0;
+//   color: white;
+//   font-size: 1em;
+//   font-weight: 600;
+//   text-align: center;
+//   line-height: 1.3;
+//   // border: 1px solid #d8c2a4;
+//   border-radius: 4px;
+//   z-index: 10;
+//   opacity: 0.6;
+// 	-webkit-user-select: none;
+//   user-select: none;
+// }
