--- a/staRt/www/css/app_styles.css
+++ b/staRt/www/css/app_styles.css
@@ -1868,39 +1868,28 @@ div.needleBox {
     width: 100%;
     height: 100%;
     z-index: 1; }
+    .free-layout_view-container .free-layout_bg-container .img-bg_BF {
+      background-color: #c2f2f2;
+      background-image: url("../img/bgImg/bg-BF.svg");
+      z-index: 1; }
   .free-layout_view-container .free-layout_content-container {
     position: relative;
     display: flex;
     flex-flow: column nowrap;
-    margin-top: 25vh;
-    margin-left: 16.66vw;
-    height: 66.66667vh;
-    width: 75vw;
+    height: 100%;
+    padding-top: 16.66667vh;
+    width: 100%;
     justify-content: space-between;
     align-items: center;
     z-index: 10; }
 
-.free-lpcFrame {
+.free-lpcBox {
   position: relative;
+  display: flex;
+  flex-flow: column nowrap;
+  height: 66.66667vh;
   width: 100%;
-  height: 460px;
-  border-radius: 6px;
-  display: block;
-  background-color: #F0F9FC;
-  border: 15px solid #F0F9FC;
-  border-bottom: 25px solid #F0F9FC;
-  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.25); }
-  .free-lpcFrame .free-lpcBox {
-    width: 100%;
-    height: 405px;
-    padding-top: 35px;
-    background-color: #c5f3ff; }
-    .free-lpcFrame .free-lpcBox .reset-button {
-      margin-top: -6.66667vh;
-      border-radius: 4px;
-      background-color: white;
-      box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.25);
-      z-index: 100; }
+  border: 1px solid cyan; }
 
 .quest-layout_view-container {
   position: relative;
@@ -2162,7 +2151,8 @@ lpc-directive {
   flex-flow: row;
   width: 100%;
   height: 100%;
-  justify-content: space-around; }
+  justify-content: space-around;
+  border: 1px solid violet; }
   lpc-directive .lpc-contentBox {
     width: 100%;
     height: 100%; }
@@ -2171,12 +2161,14 @@ lpc-directive {
   z-index: 10;
   width: 100%;
   height: 100%;
-  display: flex;
-  align-items: center; }
+  display: block;
+  align-items: center;
+  border: 1px solid lime; }
 
-.reset-button {
-  margin-top: 0px;
-  margin-right: 0px; }
+canvas {
+  width: 100%;
+  height: 100%;
+  border: 1px solid deeppink; }
 
 .button-side-container {
   position: absolute;
@@ -2305,14 +2297,23 @@ lpc-directive {
     top: -30px;
     z-index: -1; }
 
-#sand {
-  height: 60px;
-  display: block;
+#fzText {
   position: absolute;
-  left: -1px;
-  bottom: 0px;
-  width: 100.3%;
-  background-color: #FFC95F; }
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 45%;
+  padding-top: 1px;
+  left: 18.75vw;
+  width: 8.33333vw;
+  height: auto;
+  font-size: 1.1em;
+  font-weight: 600;
+  text-align: center;
+  color: #018B9D;
+  /* #50d3d6; #018B9D;*/
+  z-index: 10;
+  opacity: 0.5; }
 
 .practice-directive-container {
   height: 100%; }
