--- a/staRt/www/common-components/practice-directive/_practice-directive_styles.scss
+++ b/staRt/www/common-components/practice-directive/_practice-directive_styles.scss
@@ -5,7 +5,8 @@
 // PRACTICE-DIRECTIVE ------------------------------------
 .practice-directive-container {
   height: 100%;
-  //border: 1px solid lime;
+  width: 100%;
+  // border: 1px solid lime;
 }
 
  .promptBox-layout {
@@ -15,8 +16,8 @@
   justify-content: center;
   margin-top: $row-h;
   height: $row-h;
-  width: 96%;
-  //border: 1px solid tan;
+  width: 100%;
+  // border: 1px solid tan;
 
    .promptBox {
     display: flex;
@@ -24,7 +25,9 @@
     justify-content: flex-end;
     align-items: center;
     height: $row-h;
-    width: $col-w * 6.5;
+    width: $col-w * 7;
+    margin-left: $col-w;
+    // border: 1px solid white;
     border-bottom: 1px solid white;
   }
 }
@@ -48,7 +51,7 @@
  .words-progress-indicator {
 	display: inline-block;
 	vertical-align: middle;
-	//border: 1px solid red;
+	// border: 1px solid red;
 }
 
 
@@ -66,10 +69,13 @@
 
       div#lpc-canvas-parentSize {
         position: relative;
-        top: $row-h * 2.5;
-        left: $col-w * 2;
-        height: $row-h * 2.5;
-        width: $col-w * 7;
+        // top: $row-h * 2.5;
+        // left: $col-w * 2;
+        // height: $row-h * 2.5;
+        // width: $col-w * 7;
+        width: 100%;
+        height: $row-h * 4;
+        top: $row-h;
         //border: 1px solid blue;
       } // #lpc-canvas-parentSize
 
