--- a/staRt/www/states/root/auto/_auto_styles.scss
+++ b/staRt/www/states/root/auto/_auto_styles.scss
@@ -30,7 +30,7 @@
 		position: relative;
 		display: flex;
 		flex-direction: column;
-		padding-left: $col-w;
+		padding-left: 0;
 		height: 100%;
 		width: 100%;
 		justify-content: space-around;
@@ -48,6 +48,7 @@
 .quiz-menu-page {
 	height: 100%;
 	padding: $row-h $col-w;
+	padding-left: $col-w * 2;
 }
 
 .quiz-menu-row {
