--- a/staRt/www/common-components/practice-directive/_practice-directive_styles.scss
+++ b/staRt/www/common-components/practice-directive/_practice-directive_styles.scss
@@ -1,14 +1,19 @@
 .words-contentBox { // parent ele (is this still in use?)
-		//border: 1px solid lime;
+		border: 1px solid red;
 }
 
-// PRACTICE-DIRECTIVE ------------------------------------
+
 .practice-directive-container {
   height: 100%;
   width: 100%;
-  // border: 1px solid lime;
+  border: 1px solid lime;
 }
 
+// TOOLBAR ------------------------------------
+
+
+
+// WORD PROMPT ------------------------------------
  .promptBox-layout {
   position: absolute;
   display: flex;
@@ -55,7 +60,7 @@
 }
 
 
-// WAVE AND SIDE BUTTONS ------------------------------------
+// WAVE AND RATING BUTTONS ------------------------------------
 .lpcDir-layout_quiz-quest {
   position: absolute;
   display: block;
@@ -69,10 +74,6 @@
 
       div#lpc-canvas-parentSize {
         position: relative;
-        // top: $row-h * 2.5;
-        // left: $col-w * 2;
-        // height: $row-h * 2.5;
-        // width: $col-w * 7;
         width: 100%;
         height: $row-h * 4;
         top: $row-h;
@@ -91,7 +92,7 @@
   left: $col-w * 2;
   width: $col-w * 7;
   height: $row-h * 0.8;
-  //border: 1px solid red;
+  border: 1px solid red;
 }
  .coinBox-layout {
   text-align: left;
