--- a/staRt/www/common-components/practice-directive/_practice-directive_styles.scss
+++ b/staRt/www/common-components/practice-directive/_practice-directive_styles.scss
@@ -1,12 +1,12 @@
 .words-contentBox { // parent ele (is this still in use?)
-		border: 1px solid red;
+		//border: 1px solid red;
 }
 
 
 .practice-directive-container {
   height: 100%;
   width: 100%;
-  border: 1px solid lime;
+  //border: 1px solid lime;
 }
 
 // TOOLBAR ------------------------------------
