--- a/staRt/www/common-components/lpc-directive/_lpc-directive_styles.scss
+++ b/staRt/www/common-components/lpc-directive/_lpc-directive_styles.scss
@@ -11,7 +11,7 @@ lpc-directive { // Parent ele. Layout class.
 	width: 100%;
   height: 100%;
   justify-content: space-around;
-	border: 1px solid violet;
+	//border: 1px solid violet;
 
 	.lpc-contentBox { // Container class.
 		// Holds LPC and any .button-side-containers
