--- a/staRt/www/states/root/words/_words_styles.scss
+++ b/staRt/www/states/root/words/_words_styles.scss
@@ -84,7 +84,7 @@
 	height: 100%;
 	padding: $row-h $col-w;
 	padding-left: $col-w * 2;
-	border: 1px solid pink;
+	//border: 1px solid pink;
 }
 
 .quest-menu-row {
