--- a/staRt/www/states/root/free-play/_free_styles.scss
+++ b/staRt/www/states/root/free-play/_free_styles.scss
@@ -39,7 +39,7 @@
     justify-content: space-between;
     align-items: center;
 		z-index: 10;
-		// border: 1px solid cyan;
+		//border: 1px solid red;
 	} // .free-layout_content-container
 } // .free-layout_view-container
 
@@ -53,30 +53,54 @@
 	flex-flow: column nowrap;
 	height: $row-h * 4;
 	width: 100%;
-	// border: 1px solid cyan;
+	//border: 1px solid cyan;
 
 	.free_header-layout {
 	// similar to .promptBox-layout in practice-dir
 	 position: absolute;
 	 display: flex;
-	 flex-flow: row nowrap;
-	 justify-content: center;
-	 height: $row-h;
+	 flex-flow: column nowrap;
+	 justify-content: flex-end;
+	 align-items: center;
+	 height: $row-h * 0.85;
 	 width: 100%;
 	 padding-left: $col-w * 3;
 	 padding-right: $col-w * 2;
 	 //border: 1px solid tan;
 
+		.free_headText {
+			display: flex;
+			flex-flow: row nowrap;
+			justify-content: center;
+			align-items: flex-end;
+			font-size: 1.25em;
+			color: $c-text-main;
+			width: 100%;
+			// padding-bottom: 2em;
+			//border: 1px solid white;
+		}
+
 		.free_line {
 			// similar to .promptBox in practice-dir
 		 display: flex;
-		 flex-flow: column nowrap;
-		 justify-content: flex-end;
-		 align-items: center;
-		 height: $row-h;
+		 flex-flow: row nowrap;
+		 justify-content: center;
+		 align-items: flex-end;
 		 width: 100%;
 		 border-bottom: 1px solid white;
 	 }
-	}
+ 	} // .free_header-layout
+} // ..free-lpcBox
 
+.free-sandContainer {
+	width: 100%;
+	padding-left: $col-w * 3;
+	padding-right: $col-w * 2.25;
+	padding-bottom: $row-h * 0.4;
+
+	.free-sandText {
+		font-size: 1.25em;
+		color: #847263; //#998675;
+		//border: 1px solid white;
+	}
 }
